objects/FSL_NCTML__c.object
<CustomObject>
    <fields>
        <fullName>Expense_Total__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <label>Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Non Commercial Travel, Meals and Lodging</relationshipLabel>
        <relationshipName>Non_Commercial_Travel_Meals_and_Lodging</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Commercial-Travel</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Non Commercial Travel, Meals and Lodging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TTML-{00000000}</displayFormat>
        <label>Non Commercial Travel, Meals and Lodging</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Commercial Travel, Meals and Lodging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_NCTravel</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(Service_Order__r.Status, &quot;Closed&quot;),
ISPICKVAL(Service_Order__r.Status, &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
</CustomObject>